Bug:  PRD Reviewer:  Self Comments:  Changes for Neutron integration.  {220th} 1. Reworked the site search/quick filter widgets as per Lynn: a. In the site search: i. Moved the image to the left instead of the right of the input. ii. Made the image no longer clickable. iii. Display the 'Search Entire Site' within the INPUT while waiting for      input. iv. Fixed some styling/alignment issues. b. In the quick filter: i. Changed the empty text to 'Filter List'.
Files:
M    gwt/src/org/kablink/teaming/gwt/public/GwtMenus.css
M    gwt/src/org/kablink/teaming/gwt/client/mainmenu/SearchMenuPanel.java
M    gwt/src/org/kablink/teaming/gwt/client/GwtTeamingMessages.properties
M    gwt/src/org/kablink/teaming/gwt/client/GwtTeamingMessages.java
M    gwt/src/org/kablink/teaming/gwt/client/binderviews/QuickFilter.java

--- a/trunk/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtMenus.css
+++ b/trunk/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtMenus.css
@@ -320,25 +320,22 @@
 	.vibe-mainMenuPopup_ItemText
 	{
 	}
-	.vibe-mainMenuSearch_ButtonAnchor
-	{
-		margin: 2px;
-		vertical-align: top;
-	}
-	.vibe-mainMenuSearch_ButtonImage
+	.vibe-mainMenuSearch_Image
 	{
 		margin: 2px;
 		vertical-align: top;
 	}
 	.vibe-mainMenuSearch_Input
 	{
-		font-size: 10px;
+		font-size: 11px;
 		padding: 3px 0 0 3px;
 		vertical-align: middle;
 		width: 140px;
 		background-color: transparent;
 		border: 0px;
 	}
+	.vibe-mainMenuSearch_InputBlur  {color: graytext;}
+	.vibe-mainMenuSearch_InputFocus {color: #353838 !important;}
 	.vibe-mainMenuSearchOptions_Button
 	{
 		border: 0px !important;
